--- a/demo/layout/navbar.html
+++ b/demo/layout/navbar.html
@@ -3,6 +3,7 @@
 		<a href="/">Tasks API Demo</a></h5>
 	<nav class="my-2 my-md-0 mr-md-3">
 		<a class="p-2 text-dark" ng-click="sys.createTask()">Create</a>
-		<a class="p-2 text-dark" ng-click="data.page='list'">list</a>
+		<a class="p-2 text-dark" ng-click="data.page='list'">List</a>
+		<a class="p-2 text-dark" ng-click="sys.reset()">Reset</a>
 	</nav>
 </navbar>
