--- a/demo/layout/navbar.html
+++ b/demo/layout/navbar.html
@@ -2,8 +2,8 @@
 	<h5 class="my-0 mr-md-auto font-weight-normal">
 		<a href="/">Tasks API Demo</a></h5>
 	<nav class="my-2 my-md-0 mr-md-3">
-		<a class="p-2 text-dark" ng-click="sys.createTask()">Create</a>
-		<a class="p-2 text-dark" ng-click="data.page='list'">List</a>
-		<a class="p-2 text-dark" ng-click="sys.reset()">Reset</a>
+		<a class="p-2 text-dark pointer" ng-click="sys.createTask()">Create</a>
+		<a class="p-2 text-dark pointer" ng-click="data.page='list'">List</a>
+		<a class="p-2 text-dark pointer" ng-click="sys.reset()">Reset</a>
 	</nav>
 </navbar>
